# personal-projects-monorepo

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.py  docker-compose.yaml  future.txt  pyproject.toml  run.py
.github/workflows/: tests.yml
dockerfiles/: Dockerfile
finance/: routes.py
finance/templates/finance/: index.html
health_tracker/app/: routes_web.py
health_tracker/app/templates/health/: base.html  index.html
investment_tracker/: README.md  init_db.py
investment_tracker/app/: __init__.py  api.py  db.py  external_api.py  models.py  routes_api.py  routes_web.py  utils.py
investment_tracker/app/static/css/: style.css
investment_tracker/app/static/js/: dashboard.js
investment_tracker/app/templates/: base.html  index.html  manage.html
investment_tracker/app/templates/investment/: base.html  history.html  index.html  manage.html
memberships/app/: db.py  routes_web.py
memberships/app/static/css/: style.css
memberships/app/templates/memberships/: _membership_form.html  base.html  index.html
portal/: routes.py
portal/templates/portal/: portal_home.html
static/css/: global_style.css
templates/: base.html  portal_home.html
tests/: conftest.py  test_db.py  test_memberships_db.py
