[tool.poetry]
name = "monorepo-portal"
version = "0.1.0"
description = "Unified dashboard projects"
authors = ["Simon Stenbæk Jensen <ssj.simonsj@gmail.com>"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"